--- a/requirements.txt
+++ b/requirements.txt
@@ -1,76 +1,85 @@
-absl-py==0.13.0
-appdirs==1.4.4
-asn1crypto==0.24.0
-astor==0.8.1
-attrs==17.4.0
-Automat==0.6.0
-blinker==1.4
-cached-property==1.5.2
-certifi==2018.1.18
-chardet==3.0.4
-click==8.0.4
-colorama==0.3.7
-configobj==5.0.6
-constantly==15.1.0
-cryptography==2.1.4
-cycler==0.10.0
-distlib==0.3.0
+anyio==3.5.0
+argon2-cffi==21.3.0
+argon2-cffi-bindings==21.2.0
+asttokens==2.0.5
+attrs==21.4.0
+Babel==2.9.1
+backcall==0.2.0
+black==22.1.0
+bleach==4.1.0
+certifi==2021.10.8
+cffi==1.15.0
+charset-normalizer==2.0.11
+click==8.0.3
+colorama==0.4.4
+cycler==0.11.0
+debugpy==1.5.1
+decorator==5.1.1
+defusedxml==0.7.1
 dnspython==2.2.0
-filelock==3.0.12
+entrypoints==0.4
+executing==0.8.2
 Flask==2.0.3
-Flask-Cors==3.0.10
-gast==0.5.0
-google-pasta==0.2.0
-grpcio==1.38.1
-httplib2==0.9.2
-hyperlink==17.3.1
-idna==2.6
-importlib-metadata==4.8.3
-importlib-resources==1.5.0
-incremental==16.10.1
-itsdangerous==2.0.1
+fonttools==4.29.1
+gunicorn==20.1.0
+idna==3.3
+ipykernel==6.9.0
+ipython==8.0.1
+ipython-genutils==0.2.0
+itsdangerous==2.1.0
+jedi==0.18.1
 Jinja2==3.0.3
-jsonpatch==1.16
-jsonpointer==1.10
-jsonschema==2.6.0
-Keras-Applications==1.0.8
-Keras-Preprocessing==1.1.2
-keyring==10.6.0
-keyrings.alt==3.0
-kiwisolver==1.3.1
-Markdown==3.3.4
+json5==0.9.6
+jsonschema==4.4.0
+jupyter-client==7.1.2
+jupyter-core==4.9.1
+jupyter-server==1.13.5
+jupyterlab==3.2.9
+jupyterlab-pygments==0.1.2
+jupyterlab-server==2.10.3
+kiwisolver==1.3.2
 MarkupSafe==2.0.1
-matplotlib==3.3.4
-netifaces==0.10.4
-numpy==1.19.5
-oauthlib==2.0.6
-pandas==1.1.5
-Pillow==8.3.1
-protobuf==3.17.3
-pyasn1==0.4.2
-pyasn1-modules==0.2.1
-pycrypto==2.6.1
-PyJWT==1.5.3
+matplotlib==3.5.1
+matplotlib-inline==0.1.3
+mistune==0.8.4
+mypy-extensions==0.4.3
+nbclassic==0.3.5
+nbclient==0.5.10
+nbconvert==6.4.1
+nbformat==5.1.3
+nest-asyncio==1.5.4
+notebook==6.4.8
+numpy==1.22.2
+packaging==21.3
+pandocfilters==1.5.0
+parso==0.8.3
+pathspec==0.9.0
+pickleshare==0.7.5
+Pillow==9.0.1
+platformdirs==2.4.1
+prometheus-client==0.13.1
+prompt-toolkit==3.0.27
+pure-eval==0.2.2
+pycparser==2.21
+Pygments==2.11.2
 pymongo==4.0.1
-pyOpenSSL==17.5.0
-pyparsing==2.4.7
-pyserial==3.4
+pyparsing==3.0.7
+pyrsistent==0.18.1
 python-dateutil==2.8.2
-python-debian==0.1.32
-pytz==2021.1
-pyxdg==0.25
-PyYAML==3.12
-requests==2.18.4
-requests-unixsocket==0.1.5
-SecretStorage==2.3.1
-service-identity==16.0.0
+pytz==2021.3
+pyzmq==22.3.0
+requests==2.27.1
+Send2Trash==1.8.0
 six==1.16.0
-systemd-python==234
-termcolor==1.1.0
-Twisted==17.9.0
-typing-extensions==4.1.1
-urllib3==1.22
-virtualenv==20.0.20
+sniffio==1.2.0
+stack-data==0.1.4
+terminado==0.13.1
+testpath==0.5.0
+tomli==2.0.1
+tornado==6.1
+traitlets==5.1.1
+urllib3==1.26.8
+wcwidth==0.2.5
+webencodings==0.5.1
+websocket-client==1.2.3
 Werkzeug==2.0.3
-wrapt==1.12.1
-zipp==3.6.0
