--- a/requirements.txt
+++ b/requirements.txt
@@ -21,6 +21,7 @@ Flask==2.0.3
 Flask-Cors==3.0.10
 gast==0.5.0
 google-pasta==0.2.0
+gunicorn==20.1.0
 grpcio==1.38.1
 httplib2==0.9.2
 hyperlink==17.3.1
